# SnailPath

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
src/snailpath/: __init__.py
tools/: testserver.py
wordlists/: small.txt
